# FallingBlocksGame

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Readme.md  doxygen-config  main.cpp
assets/shaders/: button.frag
ecs/: Archetype.cpp  Archetype.hpp  Archetype.inl  CMakeLists.txt  Column.hpp  Column.inl  Commands.hpp  Commands.inl  CommandsImpl.hpp  ComponentHelper.hpp  ECS.hpp  EntityEdit.hpp  Global.hpp  Resource.hpp  System.hpp  World.cpp  World.hpp  World.inl
ecs/assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  AssetManager.inl  CMakeLists.txt
ecs/query/: CMakeLists.txt  Data.hpp  Filter.hpp  Filter.inl  Query.hpp  Query.inl
include/: App.hpp  Assets.hpp  Components.hpp  Entity.hpp  Entity.inl  GlobalResources.hpp  Scene.hpp  SceneManager.hpp  System.hpp  Systems.hpp  Test.hpp  _Entity.hpp
include/assets/: Asset.hpp  AssetManager.hpp  AssetManager.inl  Font.hpp  Shader.hpp  Sound.hpp  Texture.hpp
include/components/: Collider.hpp  Component.hpp  Sprite.hpp  Transform.hpp
include/entities/: Block.hpp  Player.hpp
include/gui/: Button.hpp
include/managers/: AssetManager.hpp  AssetsManager.hpp  ComponentManager.hpp  ResourceManager.hpp  SceneManager.hpp  SystemManager.hpp  SystemManager.inl
include/scenes/: Game.hpp  Intro.hpp  Scene.hpp  Template.hpp  Transition.hpp
include/systems/: SpriteDisplay.hpp  System.hpp  TransformParent.hpp  TransformParentSystem.hpp
include/util/: Asset.hpp
src/: App.cpp  AssetManager.cpp  CMakeLists.txt  Entity.cpp  Entity.inl  SceneManager.cpp  assets.rs  main.rs
src/components/: Component.cpp
src/entities/: CMakeLists.txt  Player.cpp
src/game/: blocks.rs  collision.rs  data.rs  game_rect.rs  inputs.rs  mod.rs  player.rs
src/managers/: AssetManager.cpp  AssetsManager.cpp  CMakeLists.txt  ComponentManager.cpp  ResourceManager.cpp  SceneManager.cpp  SystemManager.cpp
src/scenes/: CMakeLists.txt  Game.cpp  Intro.cpp  Template.cpp  Transition.cpp
src/systems/: CMakeLists.txt  SpriteDisplay.cpp  TransformParent.cpp
src/ui/: data.rs  home.rs  mod.rs  pause.rs  widgets.rs
